--- a/configs/audio/audio_effects.conf
+++ b/configs/audio/audio_effects.conf
@@ -21,8 +21,11 @@ libraries {
   loudness_enhancer {
     path /system/lib/soundfx/libldnhncr.so
   }
-  audience_pre_processing {
-    path /system/lib/libaudience_voicefx.so
+  pre_processing {
+    path /vendor/lib/liblvvetx_3.21.15.so
+  }
+  output_processing {
+    path /vendor/lib/liblvverx_3.21.15.so
   }
 }
 
@@ -87,18 +90,27 @@ effects {
     uuid fa415329-2034-4bea-b5dc-5b381c8d1e2c
   }
   agc {
-    library audience_pre_processing
-    uuid e9e87eb0-0b55-11e2-892e-0800200c9a66
+    library pre_processing
+    uuid 3b75f00-93ce-11e0-9fb8-0002a5d5c51b
   }
   aec {
-    library audience_pre_processing
-    uuid fd90ff00-0b55-11e2-892e-0800200c9a66
+    library pre_processing
+    uuid d6dbf400-93ce-11e0-bcd7-0002a5d5c51b
   }
   ns {
-    library audience_pre_processing
-    uuid 08fa98b0-0b56-11e2-892e-0800200c9a66
+    library pre_processing
+    uuid df0afc20-93ce-11e0-98de-0002a5d5c51b
+  }
+  lmfv {
+    library output_processing
+     uuid 989d9460-413d-11e1-8b0d-0002a5d5c51b
+  }
+  fens {
+    library output_processing
+     uuid cbcc5980-476d-11e1-82ee-0002a5d5c51b
   }
 }
+
 # Audio preprocessor configurations.
 # The pre processor configuration consists in a list of elements each describing
 # pre processor settings for a given input source. Valid input source names are:
@@ -107,46 +119,59 @@ effects {
 # element must be the name of one of the effects in the "effects" list of the file.
 # Each effect element may optionally contain a list of parameters and their
 # default value to apply when the pre processor effect is created.
-# A parameter is defined by a "param" element and a "value" element. Each of these elements
+# A parameter is defined by a "key" element and a "value" element. Each of these elements
 # consists in one or more elements specifying a type followed by a value.
 # The types defined are: "int", "short", "float", "bool" and "string"
-# When both "param" and "value" are a single int, a simple form is allowed where just
-# the param and value pair is present in the parameter description
 #    pre_processing {
 #        <input source name> {
 #            <fx name> {
-#                <param 1 name> {
-#                    param {
+#                <param name> {
+#                    key {
 #                        int|short|float|bool|string <value>
-#                        [ int|short|float|bool|string <value> ]
-#                        ...
+#                        int|short|float|bool|string <value>
+#                        :
 #                    }
 #                    value {
 #                        int|short|float|bool|string <value>
-#                        [ int|short|float|bool|string <value> ]
-#                        ...
+#                        int|short|float|bool|string <value>
+#                        :
 #                    }
 #                }
-#                <param 2 name > {<param> <value>}
-#                ...
+#                :
 #            }
-#            ...
+#            :
 #        }
-#        ...
+#        :
 #    }
 
-audience_pre_processing {
+#            level {
+#                key {
+#                    int test
+#                }
+#                value {
+#                    short 9000
+#                }
+#            }
+
+pre_processing {
     mic {
         agc {}
         ns {}
         aec{}
+    }
+    camcorder {
+#        ns {}
     }
     voice_communication {
         agc {}
         ns {}
         aec {}
     }
-    camcorder {
-        agc {}
+}
+
+output_processing {
+    voice_call {
+        fens {}
+        lmfv {}
     }
 }
